--- a/requirements.txt
+++ b/requirements.txt
@@ -31,6 +31,7 @@ Pygments==2.16.1
 PyJWT==2.8.0
 pymongo==4.5.0
 python-dateutil==2.8.2
+python-dotenv==1.0.0
 pytz==2023.3.post1
 PyYAML==6.0.1
 referencing==0.30.2
