--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,7 @@
 altair==5.1.2
 attrs==23.1.0
 bcrypt==4.0.1
+beautifulsoup4==4.12.2
 blinker==1.6.3
 cachetools==5.3.2
 certifi==2023.7.22
@@ -8,18 +9,31 @@ charset-normalizer==3.3.1
 click==8.1.7
 cloudinary==1.36.0
 colorama==0.4.6
+contourpy==1.2.0
+cycler==0.12.1
 dnspython==2.4.2
+entrypoints==0.4
 extra-streamlit-components==0.1.60
+Faker==20.0.3
+favicon==0.7.0
+fonttools==4.44.0
 gitdb==4.0.11
 GitPython==3.1.40
+htbuilder==0.6.2
 idna==3.4
 importlib-metadata==6.8.0
 Jinja2==3.1.2
 jsonschema==4.19.1
 jsonschema-specifications==2023.7.1
+kiwisolver==1.4.5
+lxml==4.9.3
+Markdown==3.5.1
 markdown-it-py==3.0.0
+markdownlit==0.0.7
 MarkupSafe==2.1.3
+matplotlib==3.8.1
 mdurl==0.1.2
+more-itertools==10.1.0
 numpy==1.26.1
 packaging==23.2
 pandas==2.1.2
@@ -29,8 +43,11 @@ pyarrow==13.0.0
 pydeck==0.8.1b0
 Pygments==2.16.1
 PyJWT==2.8.0
+pymdown-extensions==10.4
 pymongo==4.5.0
+pyparsing==3.1.1
 python-dateutil==2.8.2
+python-decouple==3.8
 python-dotenv==1.0.0
 pytz==2023.3.post1
 PyYAML==6.0.1
@@ -40,8 +57,20 @@ rich==13.6.0
 rpds-py==0.10.6
 six==1.16.0
 smmap==5.0.1
+soupsieve==2.5
+st-annotated-text==4.0.1
 streamlit==1.28.0
+streamlit-aggrid==0.3.4.post3
 streamlit-authenticator==0.2.3
+streamlit-camera-input-live==0.2.0
+streamlit-card==0.0.61
+streamlit-embedcode==0.1.2
+streamlit-extras==0.3.5
+streamlit-faker==0.0.3
+streamlit-image-coordinates==0.1.6
+streamlit-keyup==0.2.0
+streamlit-toggle-switch==1.0.2
+streamlit-vertical-slider==1.0.2
 tenacity==8.2.3
 toml==0.10.2
 toolz==0.12.0
